Studio component desktop version, new fonts DidactGothic & Andika

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,6 @@
     <app-about id="about-section"></app-about>
     <app-classes id="classes-section"></app-classes>
     <app-tutor id="tutor-section"></app-tutor>
-    <!-- <app-studio id="studio-section"></app-studio> -->
+    <app-studio id="studio-section"></app-studio>
     <app-contacts id="contacts-section"></app-contacts>
 </div>
