--- a/src/app/components/studio/studio.component.html
+++ b/src/app/components/studio/studio.component.html
@@ -16,60 +16,36 @@
                     </div>
                 </div>
             </div>
-
         </div>
 
         <div class="flex-col gallery-text">
-            <h3>Студия <span class="sigma-font">ΣΙΓΜΑ</span></h3>
-            <h4>идеальное место для тех, кто хочет научиться петь и раскрыть свой творческий потенциал.</h4>
-            <!-- <h4>
-                <span>Студия </span><span class="sigma-font">ΣΙΓΜΑ</span> — идеальное место для тех, кто хочет научиться
-                петь и
-                раскрыть свой творческий потенциал.
-            </h4> -->
-            <!-- <span>
-                Я предлагаю индивидуальные занятия, на которых мы будем работать вместе, чтобы вы достигли успеха.
-            </span> -->
-            <!-- <span>
-                Я предоставляю индивидуальные занятия, где мы вместе работаем над вашим успехом.
-            </span> -->
-            <span>
-                Настрой и творческая атмосфера играют ключевую роль в обучении, и я уделяю особое внимание тому, чтобы в
-                студии царила дружелюбная среда, способствующая вашему расслаблению и концентрации. Интерьер студии,
-                оснащённый современным профессиональным оборудованием, вместе с уютным уголком для отдыха создают
-                уникальную атмосферу, способствующую комфортному и продуктивному обучению.
+            <div class="flex-col gallery-text__title">
+                <h3>Студия <span class="sigma-font">ΣΙΓΜΑ</span></h3>
+            </div>
+            <span class="gallery-text__description didact-gothic-regular">
+                Настрой и творческая атмосфера играют ключевую роль в обучении. Я уделяю особое внимание тому, чтобы
+                создавать в студии комфортную среду для продуктивных занятий и вашего удовольствия.
             </span>
+            <ul class="didact-gothic-regular">
+                <li>новое профессиональное оборудование</li>
+                <li>пространство с разделением на учебную зону и уголок для отдыха</li>
+                <li>интерьер, создающий уют и стимулирующий творческую активность</li>
+                <li>грамотное освещение и ростовое зеркало для контроля за своим исполнением</li>
+                <li>удобное расположение</li>
+            </ul>
         </div>
 
         <div class="flex-col reviews-text">
-            <h3>Что говорят студенты:</h3>
-
-            <span style="text-align: center; margin-bottom: 10px;">[Top Picks from real reviews]</span>
-            <span>Присоединяйтесь к более чем 100 успешным ученикам и начните свой путь к музыкальному успеху!</span>
-            <span class="sigma-font"></span>
-            <ul>
-                <li>
-                    Персональные занятия, на которых мы будем работать вместе,
-                    чтобы вы достигли успеха
-                </li>
-                <li>
-                    Возможность развить вокальные способности и глубже погрузиться в мир музыки.
-                </li>
-                <li>
-                    ΣΙΓΜΑ — это не просто обучение, это ваш путь к раскрытию творческого потенциала.
-                </li>
-                <li>
-                    Вы откроете для себя новые грани музыки и пения
-                </li>
+            <div class="flex-col reviews-text__title">
+                <h3>Что говорят студенты:</h3>
+            </div>
+            <!-- [Abstracts from real reviews] -->
+            <ul class="didact-gothic-regular">
+                <li>Индивидуальный подход, разнообразие техник</li>
+                <li>Возможность развить вокальные способности</li>
+                <li>Реализация творческого потенциала</li>
+                <li>Открытие для себя новых граней музыки и пения</li>
             </ul>
-            <!-- <span>
-                Более 100 учеников уже раскрыли свой талант вместе с ΣΙΓΜΑ. Теперь ваша очередь присоединиться к ним и
-                начать свой путь к успеху! Я предлагаю индивидуальные занятия, на которых мы будем работать вместе,
-                чтобы вы достигли успеха. Не упустите возможность развить свои вокальные способности и погрузиться в мир
-                музыки. ΣΙΓΜΑ — это не просто обучение, это путь к реализации вашего творческого потенциала. С ΣΙΓΜΑ вы
-                откроете для себя мир музыки и пения!
-            </span> -->
-
         </div>
 
         <div class="reviews-slides">
@@ -102,7 +78,40 @@
                 </div>
             </div>
         </div>
-
     </div>
-
 </div>
+
+
+
+
+
+
+<!-- <span class="gallery-text__slogan">идеальное место для тех, кто хочет научиться петь и раскрыть свой творческий
+                    потенциал.</span> -->
+<!-- <span>
+                Интерьер студии, оснащённый современным профессиональным оборудованием, вместе с уютным уголком для
+                отдыха создают уникальную атмосферу, способствующую комфортному и продуктивному обучению.
+            </span> -->
+<!-- <span>Присоединяйтесь к более чем 100 успешным ученикам и начните свой путь к музыкальному успеху!</span>
+            <span class="sigma-font"></span>
+            <ul>
+                <li>
+                    Персональные занятия, на которых мы будем работать вместе, чтобы вы достигли успеха
+                </li>
+                <li>
+                    Возможность развить вокальные способности и глубже погрузиться в мир музыки.
+                </li>
+                <li>
+                    ΣΙΓΜΑ — это не просто обучение, это ваш путь к раскрытию творческого потенциала.
+                </li>
+                <li>
+                    Вы откроете для себя новые грани музыки и пения.
+                </li>
+            </ul> -->
+<!-- <span>
+                Более 100 учеников уже раскрыли свой талант вместе с ΣΙΓΜΑ. Теперь ваша очередь присоединиться к ним и
+                начать свой путь к успеху! Я предлагаю индивидуальные занятия, на которых мы будем работать вместе,
+                чтобы вы достигли успеха. Не упустите возможность развить свои вокальные способности и погрузиться в мир
+                музыки. ΣΙΓΜΑ — это не просто обучение, это путь к реализации вашего творческого потенциала. С ΣΙΓΜΑ вы
+                откроете для себя мир музыки и пения!
+            </span> -->
