--- a/src/app/components/classes/classes.component.scss
+++ b/src/app/components/classes/classes.component.scss
@@ -28,7 +28,7 @@
     &__title {
         margin: 15px 0;
         font-size: 22px;
-        font-weight: 500;
+        font-weight: 600;
         line-height: 30px;
     }
 }
@@ -54,10 +54,24 @@
     background-color: var(--light-color);
     box-shadow: 0 0 4px var(--dark-alt-color);
     border-radius: 20px;
+    position: relative;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 10px;
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+        background: linear-gradient(to right, transparent 80%, var(--light-color));
+    }
 
     &__header {
         margin-bottom: 8px;
         font-size: 18px;
+        font-weight: 600;
     }
 
     &__icon {
@@ -71,6 +85,22 @@
         color: var(--dark-alt-color);
         text-align: justify;
     }
+}
+
+.card:nth-child(1)::before {
+    background: linear-gradient(to right, #FF6F61 0%, transparent 80%);
+}
+
+.card:nth-child(2)::before {
+    background: linear-gradient(to right, #9454C3 0%, transparent 80%);
+}
+
+.card:nth-child(3)::before {
+    background: linear-gradient(to right, #B0E0E6 0%, transparent 100%);
+}
+
+.card:nth-child(4)::before {
+    background: linear-gradient(to right, #7FFFD4 0%, transparent 100%);
 }
 
 .right-col {
