--- a/src/app/components/tutor/tutor.component.scss
+++ b/src/app/components/tutor/tutor.component.scss
@@ -10,14 +10,15 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    padding: 40px 0;
+    // padding: 40px 0;
+    padding: 2vh 0;
 }
 
 .education {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between; // check to remove
+    justify-content: space-between;
     flex-grow: 1;
 
     &__diploma {
@@ -68,7 +69,8 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 40px 0;
+    // padding: 40px 0;
+    padding: 2vh 0;
 
     ul {
         max-width: 500px;
@@ -89,8 +91,8 @@
 }
 
 .name {
-    margin-bottom: 4px;
-    height: unset; // check to remove
+    font-size: 28px;
+    height: unset;
 }
 
 .title {
@@ -186,8 +188,6 @@ li {
     display: none;
 }
 
-// @media (max-width: 1024px) {}
-
 @media (max-width: 768px) {
     .section {
         height: unset;
@@ -274,7 +274,6 @@ li {
     .title {
         margin-right: 40px;
 
-        // align-self: center;
         .name {
             margin-left: 40px;
         }
