Studio component mobile version, fixes in About & Tutor

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -105,6 +105,10 @@ app-gallery {
     display: none;
   }
 
+  .desktop {
+    display: none;
+  }
+
   app-gallery {
     display: block;
     height: 100vh;
