--- a/src/app/components/tutor/tutor.component.html
+++ b/src/app/components/tutor/tutor.component.html
@@ -23,7 +23,7 @@
 
         <div class="flex-col center-col mid-col">
             <div class="flex-col w-100 title">
-                <h2 class="name andika-bold">[Tutor's Name]</h2>
+                <h2 class="name">[Tutor's Name]</h2>
                 <span class="subtitle">Певица, композитор, музыкант, автор песен</span>
             </div>
             <ul>
