--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <!-- For Desktop Version -->
-    <div class="wrapper h-100 flex-row center-row" *ngIf="!isMobile">
+    <div class="wrapper h-100 flex-row center-row desktop" *ngIf="!isMobile">
 
         <!-- Card template -->
         <mat-card *ngFor="let card of cards" class="h-100 card" [class.selected]="selectedCardId === card.id"
