--- a/src/app/components/classes/classes.component.scss
+++ b/src/app/components/classes/classes.component.scss
@@ -6,7 +6,7 @@
 }
 
 .left-col {
-    margin-right: 20px;
+    margin: 2vh 20px 2vh 0;
 }
 
 .wrapper {
@@ -26,7 +26,8 @@
     align-items: center;
 
     &__title {
-        margin: 15px 0;
+        margin: 0;
+        margin-bottom: 15px;
         font-size: 22px;
         font-weight: 600;
         line-height: 30px;
@@ -207,7 +208,7 @@
     .content {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(375px, 1fr));
-        gap: 40px;
+        gap: 20px;
         padding: 0;
         width: 100%;
         align-items: center;
@@ -216,7 +217,7 @@
     }
 
     .left-col {
-        margin-right: 0;
+        margin: 0;
 
         &__wrapper {
             padding: 0 10%;
@@ -238,7 +239,9 @@
         width: 100%;
 
         &__title {
-            margin: 20px 0;
+            // margin: 20px 0;
+            margin: 0;
+            margin-bottom: 20px;
             font-size: calc(22px + 0.5vw);
 
             ::ng-deep .sigma-font {
