--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="flex-col center-row section">
 
-    <div class="home-content flex-col">
+    <div class="home-content flex-col center-all">
         <h1>Добро пожаловать в<br>
             <span class="sigma-font">ΣΙΓΜΑ</span><br>
         </h1>
@@ -10,7 +10,7 @@
         <button mat-button mat-raised-button>Пeрвоe занятие бeсплатнo!</button>
     </div>
 
-    <img class="w-100 cover-img"
+    <img class="w-h-100 cover-img"
         src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/cat_S_sing2_png.jpg?ver=1"
         alt="Tutor in action">
 
