--- a/src/app/components/studio/studio.component.scss
+++ b/src/app/components/studio/studio.component.scss
@@ -181,7 +181,7 @@ h3 {
         padding: 10px;
         font-size: 16px;
         line-height: 1.4;
-        background: rgb(148, 170, 115, 0.2);
+        background: #ddeec4;
         border-left: 4px solid var(--light-alt-color);
         border-radius: 5px;
         list-style: none;
