--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -1,11 +1,9 @@
 <div class="flex-col section">
-
     <div class="flex-col plug">
         <h2></h2>
     </div>
 
     <div class="h-100 content">
-
         <div class="flex-col wrapper">
             <h3>КОНТАКТЫ</h3>
 
@@ -22,18 +20,14 @@
                 <span><a href="mailto:info@sigmavocalplace.com">{{"info@sigmavocalplace.com"}}</a></span>
             </div>
 
-            <div class="flex-col social-media">
+            <div class="flex-col social-media center-row">
                 <h4><span class="sigma-font">ΣΙΓΜΑ</span> в социальных сетях:</h4>
                 <app-social-media></app-social-media>
             </div>
-
         </div>
 
         <div class="flex-col wrapper mapy-desktop">
             <app-mapycz class="w-h-100"></app-mapycz>
         </div>
-
     </div>
-
-    <!-- <div class="footer">Website created by Osmium Tetroxide</div> -->
 </div>
