--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -42,7 +42,7 @@
             (click)="scrollToSection('contacts-section')">
             Контакты
         </button>
-        <button mat-button mat-raised-button class="action-btn">
+        <button id="action-button" mat-button mat-raised-button class="action-btn">
             Записаться
         </button>
         <!-- <button mat-icon-button>
