--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,6 +1,6 @@
-:host {
-    display: block;
-}
+// :host {
+//     display: block;
+// }
 
 mat-toolbar {
     height: 80px !important;
@@ -69,6 +69,11 @@ mat-toolbar {
 
         #tutor-button {
             font-size: calc(14px + 0.2vw);
+        }
+
+        ::ng-deep .mdc-button__label {
+            // height: 100%;
+            width: 100%;
         }
     }
 
