--- a/src/app/components/tutor/tutor.component.scss
+++ b/src/app/components/tutor/tutor.component.scss
@@ -1,11 +1,12 @@
 .content {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 1fr;
     padding-left: 5%;
 }
 
 .left-col {
+    grid-column: span 3;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -31,9 +32,8 @@
 
     &__text {
         max-width: 380px;
-        min-width: 200px;
         margin: 10px 0;
-        background: rgb(148, 170, 115, 0.2);
+        background: #ddeec4;
         box-shadow: 0 0 4px var(--dark-alt-color);
         border-radius: 5px;
     }
@@ -68,11 +68,13 @@
 }
 
 .mid-col {
+    grid-column: span 6;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     padding: 2vh 0;
+    z-index: 1;
 
     ul {
         max-width: 500px;
@@ -82,7 +84,7 @@
         display: flex;
         flex-direction: column;
         gap: 6px;
-        background: rgb(148, 170, 115, 0.2);
+        background: #ddeec4;
         box-shadow: 0 0 4px var(--dark-alt-color);
         border-radius: 5px;
     }
@@ -100,7 +102,7 @@
 .title {
     align-self: flex-start;
     padding: 10px 0;
-    background: rgb(191, 173, 81, 0.5);
+    background: #d7d695;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
 }
@@ -116,15 +118,16 @@
 }
 
 .right-col {
+    grid-column: span 3;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .img-action {
+    width: calc(100% - 40px);
     min-width: 250px;
     max-width: 400px;
-    margin: 0 20px;
     object-fit: contain;
 }
 
@@ -159,7 +162,6 @@
 
 li {
     padding: 0 20px;
-    // font-size: 16px;
     line-height: 20px;
     list-style-type: none;
     text-align: justify;
@@ -182,7 +184,7 @@ li {
     gap: 6px;
     margin: 10px 5%;
     padding: 10px 0;
-    background: rgb(148, 170, 115, 0.2);
+    background: #ddeec4;
     box-shadow: 0 0 4px var(--dark-alt-color);
     border-radius: 5px;
     font-size: 18px;
@@ -190,6 +192,16 @@ li {
 
 .upper__display {
     display: none;
+}
+
+@media (max-width: 1024px) {
+    .left-col {
+        grid-column: span 4;
+    }
+
+    .right-col {
+        grid-column: span 2;
+    }
 }
 
 @media (max-width: 768px) {
@@ -205,7 +217,7 @@ li {
         width: 100%;
         padding: 0;
         margin: 10px 0;
-        background: rgb(148, 170, 115, 0.2);
+        background: #ddeec4;
         box-shadow: 0 0 4px var(--dark-alt-color);
 
         &__diploma {
